--- a/main.css
+++ b/main.css
@@ -10,10 +10,23 @@ h2 {
 }
 h3 {
   font-family: Arial
+
+  
 }
 p {
   font-size: 14px;
   font-family: Arial
+}
+
+th, td {
+  padding: 8px;
+  text-align: left;
+  border-bottom: 1px solid #ddd;
+  font-family: Arial;
+}
+
+tr:nth-child(odd) {
+  background-color: #f2f2f2;
 }
 
 
